image stretch fix 1

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1973,6 +1973,10 @@ input:checked + .toggle-bg {
   margin-left: 3.5rem;
 }
 
+.mt-32 {
+  margin-top: 8rem;
+}
+
 .ml-72 {
   margin-left: 18rem;
 }
@@ -2035,10 +2039,6 @@ input:checked + .toggle-bg {
 
 .mt-24 {
   margin-top: 6rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
 }
 
 .mb-8 {
@@ -2117,8 +2117,8 @@ input:checked + .toggle-bg {
   height: 33.333333%;
 }
 
-.h-48 {
-  height: 12rem;
+.h-44 {
+  height: 11rem;
 }
 
 .h-12 {
@@ -2143,6 +2143,10 @@ input:checked + .toggle-bg {
 
 .h-80 {
   height: 20rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-screen {
@@ -2251,30 +2255,6 @@ input:checked + .toggle-bg {
 
 .w-0 {
   width: 0px;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-max {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .min-w-0 {
@@ -3075,6 +3055,11 @@ input:checked + .toggle-bg {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .object-center {
@@ -10064,8 +10049,8 @@ input:checked + .toggle-bg {
     margin-bottom: -12rem;
   }
 
-  .sm\:mb-60 {
-    margin-bottom: 15rem;
+  .sm\:mb-28 {
+    margin-bottom: 7rem;
   }
 
   .sm\:ml-40 {
@@ -10090,10 +10075,6 @@ input:checked + .toggle-bg {
 
   .sm\:mb-6 {
     margin-bottom: 1.5rem;
-  }
-
-  .sm\:mb-28 {
-    margin-bottom: 7rem;
   }
 
   .sm\:block {
@@ -10638,8 +10619,8 @@ input:checked + .toggle-bg {
     margin-top: 2rem;
   }
 
-  .lg\:ml-16 {
-    margin-left: 4rem;
+  .lg\:ml-0 {
+    margin-left: 0px;
   }
 
   .lg\:ml-auto {
@@ -10648,10 +10629,6 @@ input:checked + .toggle-bg {
 
   .lg\:mr-0 {
     margin-right: 0px;
-  }
-
-  .lg\:ml-0 {
-    margin-left: 0px;
   }
 
   .lg\:block {
@@ -10680,10 +10657,6 @@ input:checked + .toggle-bg {
 
   .lg\:w-0 {
     width: 0px;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
   }
 
   .lg\:w-screen {
